# 42piscine-python

0-Starting/ex00/: Hello.py
0-Starting/ex01/: format_ft_time.py
0-Starting/ex02/: find_ft_type.py
0-Starting/ex03/: NULL_not_found.py
0-Starting/ex04/: whatis.py
0-Starting/ex05/: building.py
0-Starting/ex06/: filterstring.py  ft_filter.py
0-Starting/ex07/: sos.py
0-Starting/ex08/: Loading.py
0-Starting/ex09/: README.md  pyproject.toml
0-Starting/ex09/ft_package/: __init__.py
1-Array/ex00/: give_bmi.py  tester.py
1-Array/ex01/: array2D.py  tester.py
1-Array/ex03/: load_image.py  zoom.py
1-Array/ex04/: load_image.py  rotate.py
1-Array/ex05/: pimp_image.py  tester.py
2-DataTable/ex01/: aff_life.py  load_csv.py
2-DataTable/ex02/: aff_pop.py  load_csv.py
2-DataTable/ex03/: projection_life.py
3-OOP/ex00/: S1E9.py
3-OOP/ex01/: S1E7.py  S1E9.py
3-OOP/ex02/: DiamondTrap.py  S1E9.py
3-OOP/ex03/: ft_calculator.py  tester.py
3-OOP/ex04/: ft_calculator.py  tester.py
4-Dod/ex00/: statistics.py
4-Dod/ex01/: in_out.py
4-Dod/ex02/: callLimit.py
4-Dod/ex03/: new_student.py  tester.py
